<?xml version="1.0" encoding="utf-8"?>
    <PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">


        <PreferenceCategory
            android:title="@string/user_identity">

            <com.sednev.testgreeetings.app.ExitDialog
                android:key="exit_preferences"
                android:title="@string/title_edittext_preference"
                android:summary="@string/summary_edittext_preference"
                android:dialogTitle="@string/dialog_title_edittext_preference"
                android:dialogMessage="@string/exit_message"
                android:negativeButtonText="Нет"
                android:positiveButtonText="Да"/>

            <ListPreference
                android:key="list_preference"
                android:title="@string/title_list_preference"
                android:summary="@string/summary_list_preference"
                android:entries="@array/entries_list_preference"
                android:entryValues="@array/entryvalues_list_preference"
                android:dialogTitle="@string/dialog_title_list_preference" />

        </PreferenceCategory>


    </PreferenceScreen>